--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "firebase/php-jwt": "^6.11",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "league/flysystem-ftp": "^3.27"
+        "league/flysystem-ftp": "^3.27",
+        "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
